// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {}"
  id="default"
>
  <div>
    <div
      className="ant-spin ant-spin-spinning {\\"style\\":[{\\"textAlign\\":\\"center\\",\\"width\\":\\"100%\\",\\"padding\\":\\"80px 0\\"},null]}"
      id="default"
    >
      <span
        className="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    className="ant-spin-container ant-spin-blur"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.spinning - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {}"
  id="properties.spinning"
>
  <div
    className="ant-spin-container"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.spinning 1`] = `true`;

exports[`Test Schema properties.spinning 2`] = `null`;
